--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "framer-motion": "^11.1.3",
     "vue": "^3.2.13",
+    "vue-i18n": "^9.13.1",
     "vue-router": "^4.3.1",
     "vuex": "^4.1.0"
   },
